# python-ai-training

./: .gitignore  README.md
fast-api/demo-app/: database.db  pyproject.toml
fast-api/demo-app/app/: db.py  main.py
fast-api/demo-app/app/schemas/: Item.py  ItemImage.py
fast-api/demo-app/tests/: conftest.py  demo_test.py  test_item_images.py  test_items.py
fast-api/employee-api/: README.md  employees.db  main.py  pyproject.toml
fast-api/employee-api/app/: db.py  dependencies.py  exceptions.py  main.py
fast-api/employee-api/app/business/: employee_business.py
fast-api/employee-api/app/models/: employee.py
fast-api/employee-api/app/repository/: employee_repository.py
fast-api/employee-api/app/routers/: employee_router.py
fast-api/employee-api/app/schemas/: employee.py
fast-api/employee-api/app/services/: employee_service.py
fast-api/employee-api/tests/: conftest.py  test_employees.py
grade-tracker/: README.md  grade_tracker.py  test_grade_tracker.py
mcp/: README.md  requirements.txt
mcp-server/: pyproject.toml  server.py
plugin-exercise/: main.py
plugin-exercise/plugins/: greet.py  hello.py  time_plugin.py
week1/: exercise1.py  exercise2.py  exercise3.py  exercises.md
week2/: exercise1.py  exercise2.py  exercises.md
