[project]
name = "demo-app"
version = "0.1.0"
description = "Just a basic demo app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "sqlmodel>=0.0.38",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
