[project]
name = "employee-api"
version = "0.1.0"
description = "Employee management REST API using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.38",
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
